Java 17 JEP 306 added strictfp examples